manifests/igou-blog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: igou-website
  namespace: igou
  labels:
    igou-app: website
spec:
  replicas: 4
  selector:
    matchLabels:
      igou-app: website
  template:
    metadata:
      labels:
        igou-app: website
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchExpressions:
              - key: igou-app
                operator: In
                values:
                - website
      containers:
      - env:
        image: quay.io/igou/igou.io:latest
        imagePullPolicy: Always
        name: igou-website
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 30
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/nginx-status.conf
          name: nginx-status-conf
          readOnly: true
          subPath: nginx.status.conf
#      - name: nginx-exporter
#        image: 'nginx/nginx-prometheus-exporter:0.3.0'
#        args:
#          - '-nginx.scrape-uri=http://localhost:8090/nginx_status'
#        ports:
#          - name: nginx-ex-port
#            containerPort: 9113
#            protocol: TCP
#        imagePullPolicy: Always
      nodeSelector:
        beta.kubernetes.io/arch: arm64
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-status-conf
        name: nginx-status-conf
