manifests/igou-blog-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    igou-app: website
  name: igou-website
  namespace: igou
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    igou-app: website
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
