manifests/igou-blog-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
  generation: 5
  labels:
    igou-app: website
  name: igou-website
  namespace: igou
spec:
  rules:
  - host: igou.io
    http:
      paths:
      - backend:
          serviceName: igou-website
          servicePort: 80
  - host: www.igou.io
    http:
      paths:
      - backend:
          serviceName: igou-website
          servicePort: 80
  tls:
  - secretName: igou-blog-acme-certificate
